--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "gulp-sass": "^5.1.0",
     "sass": "^1.63.6",
     "vite": "^4.3.9"
-  }
+  },
+  "browserslist":[
+    "last 1 version",
+    "> 1%"
+  ]
 }
