--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gulp": "^4.0.2",
+    "gulp-imagemin": "7.1.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
     "sass": "^1.63.6",
     "vite": "^4.3.9"
   },
-  "browserslist":[
+  "browserslist": [
     "last 1 version",
     "> 1%"
   ]
